# datarax

./: .dockerignore  .env.cloud.template  .env.example  .gitignore  .importlinter  .jupytext.toml  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  activate.sh  conftest.py  mkdocs.yml  pyproject.toml  run_tests.sh  setup.sh  verify_docs.py  vitest.config.js
.github/: pull_request_template.md
.github/workflows/: benchmark-gate.yml  benchmark-nightly.yml  build-verification.yml  ci.yml  publish.yml  summary.yml  test-coverage.yml
benchmark_baselines/: baselines.json
benchmarks/: COVERAGE_MATRIX.md  OPTIMIZATION_BACKLOG.md  __init__.py  cli.py  conftest.py  distributed_scaling_benchmark.py  export.py  mixed_source_scan.py  mnist_pipeline_benchmark.py  performance_sweep_benchmark.py
benchmarks/adapters/: __init__.py  _preload.py  _utils.py  base.py  dali_adapter.py  datarax_adapter.py  datarax_scan_adapter.py  deep_lake_adapter.py  energon_adapter.py  ffcv_adapter.py  grain_adapter.py  hf_datasets_adapter.py  jax_dl_adapter.py  litdata_adapter.py  mosaic_adapter.py  pytorch_dl_adapter.py  ray_data_adapter.py  spdl_adapter.py  tfdata_adapter.py  webdataset_adapter.py
benchmarks/analysis/: __init__.py  comparison_report.py  gap_detection.py  stability.py
benchmarks/automation/: __init__.py  _cli.py  _orchestrator_utils.py  _subprocess.py  vast_orchestrator.py
benchmarks/baselines/: AUG-1_medium.json  AUG-1_small.json  AUG-2_deterministic.json  AUG-2_stochastic.json  AUG-3_depth_1.json  AUG-3_depth_12.json  AUG-3_depth_3.json  AUG-3_depth_6.json  CV-1_medium.json  CV-1_real_cifar10.json  CV-1_small.json  CV-2_default.json  CV-3_default.json  CV-3_real_cifar10.json  CV-4_default.json  DIST-1_1_device.json  DIST-1_2_devices.json  DIST-1_4_devices.json  DIST-1_8_devices.json  DIST-2_mesh_1d.json  DIST-2_mesh_2d.json  IO-1_hf_eager.json  IO-1_hf_streaming.json  IO-1_memory_source.json  IO-1_tfds_eager.json  IO-1_tfds_streaming.json  IO-2_10k.json  IO-2_50k.json  IO-3_default.json  IO-4_default.json  MM-1_default.json  MM-1_real_coco.json  MM-2_default.json  NLP-1_medium.json  NLP-1_real_wikitext.json  NLP-1_small.json  NLP-2_default.json  NNX-1_nnx_module.json  NNX-1_plain_function.json  PC-1_depth_1.json  (+21 more)
benchmarks/config/: scenarios.toml
benchmarks/core/: __init__.py  baselines.py  config_loader.py  environment.py  microbenchmark.py  platform.py  prefetch_sweep.py  profiling.py  result_model.py  sharding.py
benchmarks/docker/: Dockerfile.cpu  Dockerfile.gpu  Dockerfile.tpu
benchmarks/fixtures/: __init__.py  real_data.py  synthetic_data.py
benchmarks/runners/: __init__.py  benchmark_runner.py  ci_runner.py  full_runner.py
benchmarks/scenarios/: __init__.py  base.py  real_data_variants.py
benchmarks/sky/: cpu-benchmark.yaml  gpu-benchmark.yaml  tpu-benchmark.yaml
benchmarks/tests/: __init__.py  conftest.py  test_adapter_abc.py  test_baselines.py  test_cli.py  test_config_loader.py  test_determinism.py  test_environment.py  test_integration.py  test_microbenchmark.py  test_platform.py  test_prefetch_sweep.py  test_profiling.py  test_real_data.py  test_regression_guard.py  test_result_model.py  test_sharding.py  test_synthetic_data.py
benchmarks/visualization/: __init__.py  charts.py
docs/: dev_guide.md  distributed_training.md  index.md  testing_guide.md
docs/_static/: extra.css
docs/api_reference/: index.md
docs/batching/: default_batcher.md  index.md
docs/benchmarking/: comparative.md  index.md  monitor.md  pipeline_throughput.md  profiler.md  regression.md  resource_monitor.md  results.md  statistics.md  timing.md
docs/benchmarks/: cloud.md  comparison.md  dashboard.md  index.md  interpretation.md  methodology.md
docs/checkpoint/: handlers.md  index.md  iterators.md
docs/cli/: benchmark.md  index.md  main.md
docs/config/: environment.md  index.md  loaders.md  registry.md  schema.md
docs/contributing/: contributing_guide.md  dev_guide.md  docker.md  example_documentation_design.md  gpu_testing.md  performance_optimization_guide.md  test_structure.md  testing_guide.md  type_issues_guide.md
docs/control/: index.md  prefetcher.md
docs/core/: batcher.md  config.md  cross_modal.md  data_source.md  element_batch.md  index.md  metadata.md  modality.md  module.md  operator.md  sampler.md  sharder.md  structural.md
docs/dag/: base.md  caching.md  control_flow.md  dag_config.md  dag_executor.md  data_source.md  field_operators.md  index.md  loaders.md  rebatch.md
docs/development/: pyright-type-issues-solutions.md
docs/distributed/: data_parallel.md  device_mesh.md  device_placement.md  index.md  mesh.md  metrics.md  sharding.md
docs/examples/: overview.md
docs/getting_started/: core_concepts.md  installation.md  quick_start.md
docs/memory/: index.md  (+1 more)
examples/: README.md  __init__.py  custom_benchmark.ipynb  custom_benchmark.py  hf_datasets_test.ipynb  hf_datasets_test.py  hf_model_training_example.ipynb  hf_model_training_example.py  run_all_examples_on_gpu.sh  run_gpu_examples.sh
scripts/: check_gpu.py  check_sync.py  distributed_test_runner.py  generate_baselines.py  generate_crepe_fixtures.py  generate_crepe_fixtures_jax.py  generate_docs.py  jupytext_converter.py  profile_iter_vs_scan.py  run_all_examples_on_gpu.sh  run_benchmarks.py  run_benchmarks.sh  run_end_to_end_tests.sh  run_full_benchmark.sh  run_gpu_examples.sh  run_gpu_tests.py  run_gpu_tests.sh  run_hf_tests.sh  run_tests.sh  run_tests_with_gpu_auto.sh  run_typecheck.sh  setup_env.py  setup_jax_gpu_env.sh  submit_vertex_job.py  validate_examples.py  verify_datarax_gpu.py  verify_docs.py  vertex_config.yaml.template
tests/: README.md  __init__.py  conftest.py  test_repository_hygiene.py  test_tooling_contracts.py
tools/benchkit/: pyproject.toml
tools/benchkit/src/benchkit/: __init__.py  analysis.py  cli.py  models.py  store.py
tools/benchkit/src/benchkit/exporters/: __init__.py  base.py  wandb.py
tools/benchkit/tests/: conftest.py  test_analysis.py  test_cli.py  test_models.py  test_store.py  test_wandb_exporter.py
(+708 files in other folders)
