[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.18"]

[dependency-groups]
dev = ["nbqa>=1.9.1", "pytest-json-report>=1.5.0"]

[project]
authors = [{name = "Mahdi Shafiei"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X"
]
dependencies = [
  "absl-py>=1",
  "antlr4-python3-runtime==4.9.3", # Specific version required by hydra-core and omegaconf
  "array-record>=0.4",
  "astunparse>=1.6",
  "beartype>=0.14.1",
  "chex>=0.1.7",
  "cloudpickle>=2",
  "decorator>=5",
  "dm-tree>=0.1.8",
  "flax>=0.12.0",
  "grain>=0.1",
  "jax>=0.6.1",
  "jaxtyping>=0.2.20",
  "optax>=0.1.4",
  "orbax-checkpoint>=0.11.10",
  "pyarrow>=12",
  "ruff>=0.1.5",
  "scipy>=1.10",
  "protobuf>=4.21.12,<5", # Pin protobuf to compatible version for tensorflow-metadata
  "tensorflow>=2.16.0", # Required for various tests (CUDA deps handled separately)
  "tensorflow-datasets>=4.9.2", # Required for TFDS source tests
  "tensorflow-metadata>=1.15.0", # Minimum version to avoid protobuf deprecation warnings
  'tomli>=2; python_version < "3.11"',
  "tomli-w>=1",
  "matplotlib",
  "pre-commit>=4.3.0",
  "psutil>=5.9.0"
]
description = "Datarax: A high-performance, NNX-based data pipeline framework for JAX"
dynamic = ["version"]
keywords = ["jax", "flax", "nnx", "data-loading", "machine-learning", "workshop"]
license = {file = "LICENSE"}
name = "datarax"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
# Platform-specific installation:
# - Linux with GPU: pip install datarax[all]
# - macOS (Apple Silicon): pip install datarax[all-macos]
# - macOS/Linux CPU-only: pip install datarax[all-cpu]
all = ["datarax[data,dev,docs,gpu,test]"]
all-cpu = ["datarax[data,dev,docs,test]"]
all-macos = ["datarax[data,dev,docs,metal,test]"]
cuda-dev = [
  # Complete CUDA development environment
  # Includes all dev tools, testing, and GPU support
  # Automatically configured via scripts/fresh_cuda_setup.sh
  "datarax[dev,gpu]"
]
data = [
  # Data loading and processing dependencies
  "grain-nightly", # Google's high-performance data loading library
  "tensorflow-datasets>=4.9.2", # For TFDS integration
  "datasets>=2.14.0", # For HuggingFace datasets
  "pillow>=10.0.0", # For image processing
  "soundfile>=0.12.1", # For audio processing
  "librosa>=0.10.0" # For advanced audio processing
]
dev = [
  "build>=1.0.3",
  "coverage>=7",
  "ipykernel>=6.29.5",
  "pydeps>=1.12.17",
  "pyright>=1.1.336",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.23",
  "pytest-benchmark>=4",
  "pytest-cov>=6.1.1",
  "pytest-env>=1.0.1",
  "pytest-timeout>=2.1",
  "pytest-xdist>=3.6",
  "shellcheck-py>=0.10.0.1",
  "python-dotenv>=1",
  "ruff>=0.1.5",
  "twine>=4.0.2",
  "pytest-json-report>=1.5.0",
  "google-cloud-aiplatform>=1.38.0",
  "google-cloud-storage>=2.14.0"
]
docs = [
  "griffe>=1.7.3",
  "hippogriffe>=0.2",
  "mkdocs>=1.6.1",
  "mkdocs-include-exclude-files>=0.1",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.0",
  "mkdocs-ipynb>=0.1",
  "mkdocs-jupyter>=0.24",
  "jupytext>=1.16.0",
  "mkdocs-material>=9.6.7",
  "mkdocstrings>=0.28.3",
  "mkdocstrings-python>=1.1.2",
  "pymdown-extensions>=10.14.3"
]
gpu = [
  # GPU dependencies - CUDA 12 support (Linux only)
  "jax[cuda12]>=0.6.1",
  "jaxlib>=0.6.1"
]
metal = [
  # Metal acceleration for Apple Silicon Macs (M1/M2/M3+)
  # Provides GPU-like acceleration on macOS
  "jax-metal>=0.1.0"
]
test = [
  "beartype>=0.14.1",
  "coverage>=7",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.23",
  "pytest-benchmark>=4",
  "pytest-cov>=6.1.1",
  "pytest-env>=1.0.1",
  "pytest-timeout>=2.1",
  "pytest-xdist>=3.6"
]

[project.scripts]
datarax = "datarax.cli:main"
datarax-cuda-test = "scripts.run_tests_with_cuda:main"
datarax-fresh-setup = "scripts.fresh_cuda_setup:main"
datarax-setup-env = "scripts.setup_env:main"
datarax-smart-test = "scripts.smart_test_runner:main"

[project.urls]
"Bug Tracker" = "https://github.com/avitai/datarax/issues"
Documentation = "https://datarax.readthedocs.io"
Source = "https://github.com/avitai/datarax"

[tool.bandit]
exclude_dirs = ["tests", "scripts", "examples", "documents", "custom_modes", "notebooks", "example_data"]
# B101: assert_used - Assert statements are the idiomatic way to write pytest tests
# They are safe in test files as pytest rewrites them for better error messages
# B110: try_except_pass - Used intentionally for optional statistics collection
skips = ["B101", "B110"]

[tool.coverage.html]
directory = "htmlcov"
skip_covered = false
skip_empty = false

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "pass",
  "raise ImportError"
]
# Adjusted for large codebase with focused testing approach
fail_under = 10
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/conftest.py", "*/__pycache__/*", "*/scripts/*", "*/examples/*", "*/benchmark/*", "*/example_data/*"]
parallel = true
source = ["src"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.datarax.cuda]
auto_detect = true
documentation = "docs/setup/cuda-setup.md"
environment_file = ".env"
fallback_to_cpu = true
setup_scripts = ["scripts/fresh_cuda_setup.sh", "scripts/setup_env.py", "scripts/run_tests_with_cuda.sh"]

[tool.hatch.version]
path = "src/datarax/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src/datarax", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["src/datarax"]

[tool.pydocstyle]
add-ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "D202", "D212", "D415"]
convention = "google"
match = ".*\\.py$"
match-dir = "^(?!tests|examples|benchmarks).*"

[tool.pyright]
exclude = ["examples", "scripts", ".deprecated", "**/__pycache__", "**/.venv"]
include = ["src", "tests"]
reportAbstractUsage = false
reportArgumentType = false
reportAssignmentType = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportFunctionMemberAccess = false
reportGeneralTypeIssues = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportIndexIssue = false
reportOperatorIssue = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
reportOptionalSubscript = false
reportPossiblyUnboundVariable = false
reportReturnType = false
reportUnusedExpression = false

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --verbose --tb=short --color=yes --durations=10 --cov=src/ --cov-report=term-missing --cov-report=html --cov-fail-under=20"
cache_dir = ".pytest_cache"
# Additional settings
console_output_style = "progress"
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore::DeprecationWarning:jax.*",
  "ignore:jax.interpreters.xla.pytype_aval_mappings is deprecated:DeprecationWarning",
  "ignore::pytest.PytestCollectionWarning:cannot collect test class 'TestFileAnalysis'",
  "ignore::pytest.PytestCollectionWarning:cannot collect test class 'TestStructureAnalyzer'",
  # CUDA-related warnings (automatically handled by conftest.py)
  "ignore::UserWarning:jax._src.xla_bridge",
  "ignore:.*cuSPARSE.*",
  "ignore:.*CUDA-enabled jaxlib.*",
  # TODO: Fix Orbax checkpoint warnings - need to provide proper sharding info when restoring
  "ignore:Sharding info not provided when restoring.*:UserWarning:orbax.*",
  "ignore:Sharding info not provided when restoring.*:UserWarning",
  # TODO: Fix Flax NNX deprecation - update to use type() instead of .type attribute
  "ignore:'.type' is deprecated:DeprecationWarning",
  # Resource warnings from checkpoint operations (cleanup issues, not functional failures)
  "ignore:unclosed <socket.socket.*:ResourceWarning",
  "ignore:unclosed event loop.*:ResourceWarning",
  # Ignore all ResourceWarnings during testing (they don't affect functionality)
  "ignore::ResourceWarning"
]
log_cli = true
log_cli_level = "INFO"
markers = [
  "tfds: marks tests that require tensorflow_datasets to be installed",
  "hf: marks tests that require huggingface datasets to be installed",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"') - automatically detected via conftest.py",
  "gpu_required: marks tests as requiring GPU (will fail if GPU unavailable)",
  "cuda: marks tests that specifically test CUDA functionality",
  "cpu: marks tests that should run on CPU only",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
  "benchmark: marks tests as performance benchmarks (requires pytest-benchmark)",
  "e2e: marks tests as end-to-end tests",
  "performance: marks tests as performance tests",
  "contract: marks tests as contract tests"
]
# Minimum version
minversion = "6.0"
python_classes = "Test*"
python_files = "test_*.py"
python_functions = "test_*"
# Main pytest configuration
testpaths = ["tests"]

[tool.pytest-benchmark]
compare = ["last", "base"]
disable_gc = true
histogram = "histogram.svg"
min_rounds = 5
min_time = 0.1
save = "benchmark-results"
save_data = true
warmup = true
warmup_iterations = 3

[tool.pytest-env]
JAX_ENABLE_X64 = "0"
JAX_SKIP_CUDA_CONSTRAINTS_CHECK = "1"
LD_LIBRARY_PATH = "/usr/local/cuda/lib64"
TF_CPP_MIN_LOG_LEVEL = "1"
XLA_PYTHON_CLIENT_MEM_FRACTION = "0.75"
XLA_PYTHON_CLIENT_PREALLOCATE = "false"

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 100
src = []
target-version = "py311"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Add W291, W292, W293 to fixable to handle whitespace issues
fixable = ["I001", "F401", "E", "W", "W291", "W292", "W293", "F841"]
ignore = [
  "E402", # Module level import not at top of file
  "E721", # Do not compare types directly
  "E731", # Do not assign a lambda expression, use a def (we can refactor these later)
  "E741", # Ambiguous variable name
  "F722", # Forward annotation syntax error
  "W391", # Blank line at end of file
  "E203", # Whitespace before ':'
  # Typing modernization warnings - can be fixed later in a dedicated PR
  "UP006", # Use `list` instead of `List` for type annotation
  "UP007", # Use `X | Y` for type annotations
  "UP015", # Unnecessary open mode parameters
  "UP024", # Replace aliased errors with `OSError`
  "UP035", # Import from `collections.abc` instead
  "RUF005" # Consider using unpacked tuple instead of concatenation
]
# E: Pyflakes and pycodestyle errors
# F: Pyflakes
# I: isort
# W: pycodestyle warnings
select = ["E", "F", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = []
known-first-party = ["datarax"]
lines-after-imports = 2
order-by-type = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
python-preference = "only-managed"

# Configure for GPU package installation
[tool.uv.pip]
find-links = ["https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"]
