[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchkit"
version = "0.1.0"
description = "Benchmark analysis library with W&B dashboard integration"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.18"]
stats = ["scipy>=1.10"]

[project.scripts]
benchkit = "benchkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/benchkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
